# yukar

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/src/yukar/: __init__.py  __main__.py  app.py  cli.py  deps.py
apps/api/src/yukar/agents/: __init__.py  context.py  dispatch.py  dispatch_attempt.py  dispatch_helpers.py  evaluator.py  mcp_manager.py  orchestrator.py  orchestrator_tools.py  project_extras.py  prompts.py  trials.py  worker.py
apps/api/src/yukar/config/: loader.py  paths.py  settings.py
apps/api/tests/: _helpers.py  conftest.py  test_agent_profile_base_role_cast.py  test_agent_profiles.py  test_api_docs_tasks_settings.py  test_api_integration.py  test_api_projects.py  test_arbiter_merge.py  test_arbiter_remainder_slice.py  test_ask_user_gate.py  test_browser_login.py  test_browser_overview_tools.py  test_browser_tools.py  test_cli.py  test_command_allowlist_prefix.py  test_config.py  test_config_isolation.py  test_content_part_schema.py  test_decks_api.py  test_dev_server_manager.py  test_dispatch_agents.py  test_envfile.py  test_epic_close.py  test_epic_task_fields_and_prompts.py  test_epic_token_backfill.py  test_faiss_resilience.py  test_fake_model_fidelity.py  test_foundation_layer.py  test_fs_delete.py  test_git.py  test_git_integration.py  test_git_merge_epic_status.py  test_git_parsing.py  test_gitattributes_unset_detection.py  test_gitignore_negation.py  test_hitl_reload_backfill.py  test_indexer_degrade_fixes.py  test_indexer_dimension_guard.py  test_indexer_empty_chunk_fix.py  test_indexer_error_visibility.py  (+61 more)
(+428 files in other folders)
