[project]
name = "yukar"
version = "0.1.0"
description = "Autonomous coding agent - local-only web app"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "ruamel.yaml>=0.18.6",
    "pathspec>=0.12.1",
    "strands-agents>=1.44.0",
    "faiss-cpu>=1.14.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.1",
    "numpy>=2.0",
    "watchfiles>=0.21",
    "httpx>=0.28.1",
    "anthropic>=0.105.2",
    "playwright>=1.61.0",
    "python-pptx>=1.0.2",
]

[project.scripts]
yukar = "yukar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yukar"]

[tool.uv]
exclude-newer = "7 days"
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    # Pinned <0.15: ruff 0.15.x formatter corrupts `except (A, B):` into invalid
    # `except A, B:` under target-version py314 (astral-sh/ruff#25065, #24041).
    "ruff>=0.4.0,<0.15",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ty.environment]
python-version = "3.14"
